.card More Akan Name information with a wikipedia link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             Most Ghanaians have at least one name from this system, even if they also have an English or Christian name. Notable figures with day names include Ghana's first president Kwame Nkrumah and former United Nations Secretary-General Kofi Annan.
           </strong>
         </p>
-        <a href="https://en.wikipedia.org/wiki/Akan_names" class="card-link"><em>cultural facts</em></a>
+        <a href="https://en.wikipedia.org/wiki/Akan_names" class="card-link"><em>More Akan Information</em></a>
       </div>
     </div>
     <p id="copyright">copyright @ 2020 All rights reserved</p>
