h2 color to red and Female label

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2 class="text-primary">Select your gender:</h2>
       <label for="male">Male:</label>
       <input type="checkbox" id="male" class="">
-      <label for="male">Female:</label>
+      <label for="Female">Female:</label>
       <input type="checkbox" id="female" class=""><br>
       <p id="check-boxerror"></p>
           
