strong Make checkbox

--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
       <h2 class="text-primary">Enter your birth date:</h2>
       <input type="text" id="day" class="form-control" placeholder="day">
       <p id="dayerror"></p>
-
       <input type="text" id="month" class="form-control" placeholder="month">
       <p id="montherror"></p>
-
       <input type="text" id="year" class="form-control" placeholder="year">
       <p id="yearerror"></p>
       <h2 class="text-primary">Select your gender:</h2>
-      <label for="male">Male:</label>
+      <label for="male"><strong>Male:</strong></label>
       <input type="checkbox" id="male" class="">
       <label for="Female">Female:</label>
       <input type="checkbox" id="female" class=""><br>
