Strong Female Checkbox

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h2 class="text-primary">Select your gender:</h2>
       <label for="male"><strong>Male:</strong></label>
       <input type="checkbox" id="male" class="">
-      <label for="Female">Female:</label>
+      <label for="Female"><strong>Female:</strong></label>
       <input type="checkbox" id="female" class=""><br>
       <p id="check-boxerror"></p>
           
