--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h1>GHANA AKAN NAMES GENERATOR</h1>
+      <h1>GHANA AKAN NAMES</h1>
       <P class="description">
       Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. By filling out the form below you get your Akan name according to your birthday. 
       </P>
